docs: SHA-1 version-map softening + DeSerializationPermission-enforced-on-DirtyChai fix
- Method identifier version-keyed (Peter 2026-07-24): 0x00 rejected outright
  (security, JOSS-without-Atomic); 0x01 retains SHA-1 (atomic-interop, sunset
  JGDMS 5.0 before NIST-2030); 0x02 (DER, the unreleased 4.0.0 version) uses
  SHA-256 at zero interop cost — length-delimited, SHA-512-capable, 128-bit
  default. Supersedes the earlier drop-SHA-1-entirely position.
- Correct stale claim in STD-006 + SOW-der-serializer-registry: the
  DeSerializationPermission gate is ENFORCED on DirtyChai (CombinerSecurityManager
  via -Djava.security.manager=default), inert only on no-SM runtimes (stock JDK
  24+, non-JVM peers) — the 'inert under DirtyChai' phrasing conflated DirtyChai
  with stock JDK's SM removal.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>